# finances

./: .gitignore  .pylintrc  AGENTS.md  README.md  budget_tool.py  initial_design.md  pyproject.toml  test_output.csv  textual_example.py
budget/: __init__.py  common.py  import_data.py  main.py  processed_transaction.py  raw_transaction.py  screens.py  transaction.py  widgets.py
budget/screens/: __init__.py  common.py  filter.py  load.py  pot_category.py  pot_transfer.py  save.py  summary.py
budget/styles/: style.tcss
data/: test_data.csv
tests/: test_app.py  test_data_io.py  test_exit.py  test_filter_screen.py  test_filtering.py  test_import_data.py  test_linking.py  test_load_flow.py  test_manual_linking.py  test_navigation.py  test_pot_category.py  test_raw_transaction.py  test_screens.py  test_transaction.py  test_widgets.py  utils.py
tests/ui/: test_income_summary.py  test_screens.py  test_summary_screen.py
